KNL-154 make members final and remove inefficient Boolean constructors
git-svn-id: https://source.sakaiproject.org/svn/kernel/trunk@60052 66ffb92e-73f9-0310-93c1-f5514f145a0a